<resources>
    <string name="app_name">All Sports Scorer</string>
    <string name="score_a">0</string>
    <string name="score_b">0</string>
    <string name="team_b">Team b</string>
    <string name="team_a_plus1">+1</string>
    <string name="team_a_plus2">+2</string>
    <string name="team_a_plus3">+3</string>
    <string name="team_b_plus1">+1</string>
    <string name="team_b_plus2">+2</string>
    <string name="team_b_plus3">+3</string>
    <string name="end">End Game</string>
    <string name="team_a">Team a</string>
    <string name="team_a_minus_1">-1</string>
    <string name="team_b_minus_1">-1</string>
    <string name="cricket_app_name">softlab</string>
    <string name="cricket_all">cricket_all</string>
    <string name="cricket_sports">cricket_sports</string>
    <string name="cricket_scorer">cricket_scorer</string>
    <string name="cricket_startMatch">start match</string>
    <string name="cricket_TeamA">team 1</string>
    <string name="cricket_TeamB">team 2</string>
    <string name="cricket_TeamName">enter Team Name</string>
    <string name="cricket_over">Number of Overs</string>
    <string name="cricket_normal">won the toss and decided to </string>
    <string name="cricket_normal1">first</string>
    <string name="cricket_done">done</string>
    <string name="cricket_bat">bat</string>
    <string name="cricket_bowl">bowl</string>
    <string name="cricket_dot">0</string>
    <string name="cricket_single">1</string>
    <string name="cricket_two">2</string>
    <string name="cricket_trible">3</string>
    <string name="cricket_four">4</string>
    <string name="cricket_six">6</string>
    <string name="cricket_initialScore">0/0</string>
    <string name="cricket_welcome">%1$s needs %2$s runs to win in %3$d balls</string>
</resources>