<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasketballScoring"
    android:background="@drawable/bb_bg">

    <TextView
        android:id="@+id/basketball_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="BASKETBALL"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="48sp"
        android:textColor="@color/primary"/>

    <TextView
        android:id="@+id/basketball_score_team_a"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:gravity="center"
        android:text="@string/score_a"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="110sp"
        android:fontFamily="@font/roboto_condensed_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basketball_team_a"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/basketball_score_team_b"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:gravity="center"
        android:text="@string/score_b"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="110sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basketball_team_b" />

    <TextView
        android:id="@+id/basketball_team_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:gravity="center"
        android:text="@string/team_a"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basketball_title"
        android:layout_marginLeft="51dp" />

    <TextView
        android:id="@+id/basketball_team_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:gravity="center"
        android:text="@string/team_b"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketball_title"
        android:layout_marginRight="51sp" />

    <Button
        android:id="@+id/basketball_team_a_plus1"
        android:layout_width="67sp"
        android:layout_height="67sp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bb_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketball_score_team_a" />

    <Button
        android:id="@+id/basketball_team_a_plus2"
        android:layout_width="67sp"
        android:layout_height="67sp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bb_2"
        app:layout_constraintTop_toBottomOf="@+id/basketball_team_a_plus1" />

    <Button
        android:id="@+id/basketball_team_a_plus3"
        android:layout_width="67sp"
        android:layout_height="67sp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bb_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketball_team_a_plus2" />

    <Button
        android:id="@+id/basketball_team_b_plus1"
        android:layout_width="67sp"
        android:layout_height="67sp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bb_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketball_score_team_b" />

    <Button
        android:id="@+id/basketball_team_b_plus2"
        android:layout_width="67sp"
        android:layout_height="67sp"
        android:layout_marginRight="60dp"
        android:background="@drawable/bb_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/basketball_team_b_plus1" />

    <Button
        android:id="@+id/basketball_team_b_plus3"
        android:layout_width="67sp"
        android:layout_height="67sp"
        android:layout_marginRight="60dp"
        android:background="@drawable/bb_3"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketball_team_b_plus2" />


    <Button
        android:id="@+id/basketball_team_a_minus_1"
        android:layout_width="67sp"
        android:layout_height="67sp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/bb_minus"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketball_team_a_plus3" />

    <Button
        android:id="@+id/basketball_team_b_minus_1"
        android:layout_width="67sp"
        android:layout_height="67sp"
        android:layout_marginRight="60dp"
        android:background="@drawable/bb_minus"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketball_team_b_plus3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="END GAME"
        android:background="@drawable/yellow_btn"
        android:id="@+id/basketball_end"
        />
</androidx.constraintlayout.widget.ConstraintLayout>